# tensor-diffusion-llm

./: .gitignore  README.md  paper_improvement_plan.md  pyproject.toml  tensor_guided_masked_diffusion_implementation_plan.md  todo.md
src/results/checkpoints/: denoiser_sudoku.pt
src/tdr/: __init__.py
src/tdr/diffusion/: denoisers.py  poe.py  sampler.py  state.py  transformer_mdlm.py
src/tdr/domains/: base.py  boolsat.py  json_schema.py  json_schema_v2.py  json_schema_v3.py  sudoku4.py
src/tdr/experiments/: coupling_sweep.py  definitive_confirm.py  eval_sat_learned.py  plot_quality_sweep.py  run_hard_benchmark.py  run_json_experiment.py  run_json_v2_experiment.py  run_noisy_sweep.py  run_poe_experiment.py  run_quality_sweep.py  run_random_remask_control.py  run_repair_experiment.py  run_symbolic_tn_denoising.py  save_noisy_sweep.py  stress_test.py  train_quality_sweep.py
src/tdr/policies/: entropy_policy.py  verifier_policy.py
src/tdr/tn/: __init__.py  brute_force_backend.py  factors.py  marginals.py
src/tdr/training/: datasets.py  train_denoiser.py
src/tdr/verifier/: local_residuals.py
tests/: test_marginals.py  test_poe.py  test_sudoku4.py
tex/: main.aux  main.out  main.tex
