[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "tensor-diffusion-reasoning"
version = "0.1.0"
description = "Tensor-guided masked diffusion for logical sequence reasoning"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "numba",
]

[project.optional-dependencies]
test = [
    "pytest",
]
dev = [
    "pytest",
    "matplotlib",
]

[tool.setuptools.packages.find]
where = ["src"]
